[package]
name = "web-app"
version = "0.10.0"
description = "The crypto-helper is an online app that helps to work with the diferent crypto algorithms."
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/TheBestTvarynka/crypto-helper"

[workspace]
members = [
    "crates/asn1-parser",
    "crates/prop-strategies"
]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-notifications = { git = "https://github.com/TheBestTvarynka/yew-notifications.git", features = ["standard-notification"] }
yew-hooks = "0.3"
yew-agent = "0.3"

# wasm
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

# logging
wasm-logger = "0.2"
log = "0.4"

# utils
hex = "0.4"
gloo-timers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0"
base64 = "0.22"
time = { version = "0.3", features = ["local-offset", "wasm-bindgen"] }

# crypto
picky-krb = { git = "https://github.com/TheBestTravynka/picky-rs.git", rev = "604a246" }
picky = { version = "7.0.0-rc.8", default-features = false }
md5 = "0.7"
sha1 = "0.11.0-pre.3"
hmac-sha256 = "1.1"
hmac-sha512 = { version = "1.1", features = ["sha384"] }
rsa = "0.9"
bcrypt = "0.15"
flate2 = { version = "1.0", features = ["zlib"] }
rand = { version = "0.9.0-alpha.0", default-features = false, features = ["small_rng"] }
rand_chacha = "0.9.0-alpha.0"

# asn1
asn1-parser = { path = "./crates/asn1-parser", features = ["std"] }
oid = { version = "0.2", default-features = false }
paste = "1.0"

# diff
similar = "2.4"