[package]
name = "crypto-helper"
version = "0.15.0"
description = "The crypto-helper is an online app that helps to work with the diferent crypto algorithms."
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/TheBestTvarynka/crypto-helper"

[workspace]
members = [
    "crates/asn1-parser",
    "crates/prop-strategies"
]

[[bin]]
name = "crypto-helper-app"
path = "src/bin/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-notifications = { version = "0.2", features = ["standard-notification"] }
yew-hooks = "0.3"
yew-agent = "0.3"

# wasm
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

# logging
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }
tracing = "0.1"

# utils
hex = "0.4"
gloo-timers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0"
base64 = "0.22"
time = { version = "0.3", features = ["local-offset", "wasm-bindgen"] }

# crypto
picky-krb = { git = "https://github.com/TheBestTravynka/picky-rs.git", rev = "604a246" }
picky = { version = "7.0.0-rc.8", default-features = false }
md5 = "0.7"
sha1 = "0.11.0-pre.3"
sha2 = "0.10.8"
hmac = "0.12.1"
rsa = "0.9"
bcrypt = "0.15"
flate2 = { version = "1.0", features = ["zlib"] }
rand = { version = "0.9.0-alpha.0", default-features = false, features = ["small_rng"] }
rand_chacha = { version = "0.9.0-alpha.0", default-features = false }
argon2 = "0.5"
password-hash = "0.5"

# asn1
asn1-parser = { path = "./crates/asn1-parser", features = ["std"] }
oid = { version = "0.2", default-features = false }
oid-registry = { version = "0.8", features = [ "crypto" ] }
paste = "1.0"

# diff
similar = { version = "2.4", features = ["serde"] }
