[package]
name = "crypto-helper"
version = "0.15.0"
description = "The crypto-helper is an online app that helps to work with the diferent crypto algorithms."
edition = "2024"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/TheBestTvarynka/crypto-helper"

[workspace]
members = [
    "crates/asn1-parser",
    # TODO: fix prop strategies.
    # "crates/prop-strategies"
]

[[bin]]
name = "crypto-helper-app"
path = "src/bin/main.rs"

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-notifications = { version = "0.2", features = ["standard-notification"] }
yew-hooks = "0.3"
yew-agent = "0.3"

# wasm
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "DomTokenList", "Element"] }

# logging
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }
tracing = "0.1"

# utils
hex = "0.4"
gloo-timers = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.12"
serde_json = "1.0"
base64 = "0.22"
time = { version = "0.3", features = ["local-offset", "wasm-bindgen"] }

# crypto
picky-krb = "0.11"
picky = { version = "7.0.0-rc.16", default-features = false }
md5 = "0.8"
sha1 = "0.11.0-rc.0"
sha2 = "0.10"
hmac = "0.12"
rsa = "0.9"
bcrypt = { version = "0.17" }
flate2 = { version = "1.1", features = ["zlib"] }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }
rand_chacha = { version = "0.9", default-features = false }
argon2 = "0.5"
password-hash = "0.5"
num-bigint-dig = { version = "0.8", default-features = false }

# asn1
asn1-parser = { path = "./crates/asn1-parser", features = ["std"] }
oid = { version = "0.2", default-features = false }
paste = "1.0"

# diff
similar = { version = "2.7", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"]}
getrandom_2 = { package = "getrandom", version = "0.2", features = ["js"]}