[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", branch = "master", features = ["csr"] }

# wasm
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Document"] }

# logging
wasm-logger = "0.2.0"
log = "0.4.17"

# utils
hex = "0.4.3"

# crypto
picky-krb = { git = "https://github.com/TheBestTravynka/picky-rs.git", branch = "wasm" }