[package]
name = "asn1-parser"
description = "This `asn1` parser is aimed to parse input bytes and return an AST as the result."
version = "0.1.0"
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/TheBestTvarynka/crypto-helper"

[features]
default-fearures = []
std = []

[dev-dependencies]
#prop-strategies = { path = "../prop-strategies" }
proptest = "1.2.0"

[dependencies]
log = "0.4.20"
num-bigint-dig = { version = "0.8.4", default-features = false }
