[package]
name = "asn1-parser"
description = "This `asn1` parser is aimed to parse input bytes and return an AST as the result."
version = "0.1.0"
edition = "2021"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/TheBestTvarynka/crypto-helper"

[features]
default-fearures = []
std = []

[dev-dependencies]
env_logger = "0.11.3"
prop-strategies = { path = "../prop-strategies" }
proptest = "1.2.0"

[dependencies]
tracing = "0.1"
num-bigint-dig = { version = "0.8.4", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
oid = { version = "0.2.1", default-features = false }
paste = "1.0.14"
env_logger = "0.11.3"
