[package]
name = "asn1-parser"
description = "This `asn1` parser is aimed to parse input bytes and return an AST as the result."
version = "0.1.0"
edition = "2024"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
readme = "README.md"
license-file = "../../LICENSE"
repository = "https://github.com/TheBestTvarynka/crypto-helper"

[features]
default-fearures = []
std = []

[dev-dependencies]
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi"] }
prop-strategies = { path = "../prop-strategies" }
proptest = "1.2"

[dependencies]
tracing = "0.1"
num-bigint-dig = { version = "0.8", default-features = false }
num-traits = { version = "0.2", default-features = false }
oid = { version = "0.2", default-features = false }
paste = "1.0"
env_logger = "0.11"
